--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: 123456
-          POSTGRES_DB: simple_bank
+          POSTGRES_DB: nmc_bookstore
         ports:
           - 5432:5432
         options: >-
