--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,5 @@ services:
       - "8080:8080"
     environment:
       - DB_SOURCE=postgresql://root:123456@postgres:5432/nmc_bookstore?sslmode=disable
-      - DB_HOST=postgres_host
-    entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
+    entrypoint: ["sh", "/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
     command: ["/app/main"]
