--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,5 +16,7 @@ services:
       - "8080:8080"
     environment:
       - DB_SOURCE=postgresql://root:123456@postgres:5432/nmc_bookstore?sslmode=disable
-    entrypoint: ["sh", "/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
+    depends_on:
+      - postgres
+    entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
     command: ["/app/main"]
