--- a/app.env
+++ b/app.env
@@ -1,6 +1,8 @@
+ENVIRONMENT=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:123456@localhost:5432/nmc_bookstore?sslmode=disable
 DB_SOURCE_TEST=postgresql://root:123456@localhost:5432/nmc_bookstore?sslmode=disable
-SERVER_ADDRESS=0.0.0.0:8081
+SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=20d68f0fd1eae939b6c415d2b86ea022
 ACCESS_TOKEN_DURATION=720h
+MIGRATION_URL=file://db/migrations
