update docker compose with redis

--- a/app.env
+++ b/app.env
@@ -7,3 +7,7 @@ TOKEN_SYMMETRIC_KEY=20d68f0fd1eae939b6c415d2b86ea022
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=1440h
 MIGRATION_URL=file://db/migrations
+REDIS_ADDRESS=redis:6379
+EMAIL_SENDER_NAME=NMC Bookstore
+EMAIL_SENDER_ADDRESS=simplebanknmc@gmail.com
+EMAIL_SENDER_PASSWORD=gscarehgoibalegz
