--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,10 @@ services:
       - POSTGRES_DB=nmc_bookstore
     ports:
       - "5432:5432"
+  redis:
+    image: redis:7.0-alpine
+    ports:
+      - "6379:6379"
   api:
     build:
       context: .
