--- a/app.env
+++ b/app.env
@@ -11,3 +11,6 @@ REDIS_ADDRESS=redis:6379
 EMAIL_SENDER_NAME=NMC Bookstore
 EMAIL_SENDER_ADDRESS=nmcbookstoreproject@gmail.com
 EMAIL_SENDER_PASSWORD=tlsztynamdkmqcvn
+CLOUDINARY_CLOUD_NAME=doqhasjec
+CLOUDINARY_API_KEY=265445269943914
+CLOUDINARY_API_SECRET=_Pgk4dzDSzVXrviet45m7rBlcQ4
