--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,16 +6,22 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=123456
       - POSTGRES_DB=nmc_bookstore
+    restart: 
+      always
     ports:
       - "5432:5432"
   redis:
     image: redis:7.0-alpine
+    restart: 
+      always
     ports:
       - "6379:6379"
   api:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: 
+      always
     ports:
       - "8080:8080"
     environment:
